--- a/index.html
+++ b/index.html
@@ -195,7 +195,20 @@
             </div>
        </section>
     </main>
-    
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <div class="footer__social-links">
+                    <div class="social-links__logo"><a href="#" class="footer__link"><ion-icon name="mail-outline"></ion-icon> Rami Ghazzawi</a></div>
+                    <div class="social-links__logo"><a href="#" class="footer__link"><ion-icon name="call-outline"></ion-icon> +962785574285</a></div>
+                    <div class="social-links__logo"><a href="#" class="footer__link"><ion-icon name="home-outline"></ion-icon>Jordan, Zarqa</a></div>
+                    <div class="social-links__logo"></div>
+                </div>
+                
+                <p class="footer__copy-right">&copy; 2024 Rami Ghazzawi. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
