Make it responsive part 1

--- a/index.html
+++ b/index.html
@@ -30,30 +30,34 @@
     </header>
     <main>
         <section class="section-hero">
+            <div class="container">
                 <div class="main-message">
                     <h1>I'm <span>Rami Ghazzawi</span></h1>
                     <p>I’m a <span>web developer</span> based in <span>Zarqa, Jordan</span>, specializing in creating <span>unique</span>, <span>high-quality</span> websites that are not only visually appealing but also provide a <span>great user experience.</span></p>
                 </div>
+            </div>
         </section>
         <section class="section-about" id="about">
-            <div class="about" data-aos="fade-up">
-
-                <div class="section-about__image"><img src="img/profilepic.jpg" alt=""></div>
-                <div class="section-about__text">
-                    <div class="section-about__about-me">
-                        <h2 class="second-heading">About Me</h2>
-                        <p>Hi, I’m Rami Ghazzawi, a web developer based in Zarqa, Jordan. I specialize in creating unique, high-quality websites that are not only visually appealing but also provide a great user experience. I have a passion for building websites that are easy to use and look great on all devices. I am always looking for new challenges and opportunities to learn and grow as a developer.</p>
-                    </div>
-                    <div class="section-about__contact-details">
-                        <div>
-                            <h2 class="second-heading">Contact Details</h2>
-                            <p>Rami Ghazzawi</p>
-                            <p>Zarqa, Jordan</p>
-                            <p>+962785574285</p>
-                            <p>Rami.ghazzawiabed@gmail.com</p>
+            <div class="container">
+                <div class="about" data-aos="fade-up">
+                    
+                    <div class="section-about__image"><img src="img/profilepic.jpg" alt=""></div>
+                    <div class="section-about__text">
+                        <div class="section-about__about-me">
+                            <h2 class="second-heading">About Me</h2>
+                            <p>Hi, I’m Rami Ghazzawi, a web developer based in Zarqa, Jordan. I specialize in creating unique, high-quality websites that are not only visually appealing but also provide a great user experience. I have a passion for building websites that are easy to use and look great on all devices. I am always looking for new challenges and opportunities to learn and grow as a developer.</p>
                         </div>
-                        <div class="cv-button">
-                            <a href="#">Download CV</a>
+                        <div class="section-about__contact-details">
+                            <div>
+                                <h2 class="second-heading">Contact Details</h2>
+                                <p>Rami Ghazzawi</p>
+                                <p>Zarqa, Jordan</p>
+                                <p>+962785574285</p>
+                                <p>Rami.ghazzawiabed@gmail.com</p>
+                            </div>
+                            <div class="cv-button">
+                                <a href="#">Download CV</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -199,10 +203,9 @@
         <div class="container">
             <div class="footer">
                 <div class="footer__social-links">
-                    <div class="social-links__logo"><a href="#" class="footer__link"><ion-icon name="mail-outline"></ion-icon> Rami Ghazzawi</a></div>
-                    <div class="social-links__logo"><a href="#" class="footer__link"><ion-icon name="call-outline"></ion-icon> +962785574285</a></div>
-                    <div class="social-links__logo"><a href="#" class="footer__link"><ion-icon name="home-outline"></ion-icon>Jordan, Zarqa</a></div>
-                    <div class="social-links__logo"></div>
+                    <div class="social-links__logo"><a href="mailto:rami.ghazzawiabed@gmail.com" class="footer__link"><ion-icon name="mail-outline"></ion-icon>Rami Ghazzawi</a></div>
+                    <div class="social-links__logo"><a href="tel:+962785574285" class="footer__link"><ion-icon name="call-outline"></ion-icon>+962785574285</a></div>
+                    <div class="social-links__logo"><a target="_blank" href="https://www.google.com/maps/place/%D8%A7%D9%84%D8%B2%D8%B1%D9%82%D8%A7%D8%A1%E2%80%AD/@32.0522649,36.2984933,11z/data=!3m1!4b1!4m6!3m5!1s0x151b658f76dbb883:0x6dbb13eec3c7a1f1!8m2!3d32.0608187!4d36.0941795!16zL20vMDRka2Rm?entry=ttu" class="footer__link"><ion-icon name="home-outline"></ion-icon>Jordan, Zarqa</a></div>
                 </div>
                 
                 <p class="footer__copy-right">&copy; 2024 Rami Ghazzawi. All rights reserved.</p>
