make the social-links work

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li><a href="#projects">Projects</a></li>
                 </ul>
                 <div class="social-links">
-                    <ion-icon name="logo-linkedin" class="social-logo"></ion-icon>
-                    <ion-icon name="logo-github" class="social-logo"></ion-icon>
+                    <a href="https://www.linkedin.com/in/rami-ghazzawi-47701530a/" target="_blank"><ion-icon name="logo-linkedin" class="social-logo"></ion-icon></a>
+                    <a href="https://github.com/ramighazzawi2002" target="_blank"><ion-icon name="logo-github" class="social-logo"></ion-icon></a>
                 </div>
                 <div class="hamburger-menu">
                     <span class="line"></span>
